启用 ZGC。