@@ -246,7 +246,9 @@
                   <OTEL_EXPORTER_OTLP_PROTOCOL>grpc</OTEL_EXPORTER_OTLP_PROTOCOL>
                   <OTEL_SERVICE_NAME>${project.artifactId}</OTEL_SERVICE_NAME>
                   <OTEL_SDK_DISABLED>true</OTEL_SDK_DISABLED>
-                  <OTEL_JAVA_EXTENSIONS>${agent-path}/${otel-ali-extension.name}</OTEL_JAVA_EXTENSIONS>
+                  <OTEL_JAVA_EXTENSIONS>
+                    ${agent-path}/${otel-ali-extension.name}
+                  </OTEL_JAVA_EXTENSIONS>
                 </environment>
                 <ports>
                   <port>${app.port}</port>
@@ -258,6 +260,7 @@
                 </volumes>
                 <jvmFlags>
                   <jvmFlag>-javaagent:${agent-path}/${opentelemetry-javaagent.name}</jvmFlag>
+                  <jvmFlag>-XX:+UseZGC</jvmFlag>
                 </jvmFlags>
                 <appRoot>${workdir}</appRoot>
                 <workingDirectory>${workdir}</workingDirectory>
